# persistent-mongo-rs

./: Cargo.toml
src/: lib.rs  mongo_uri.rs  persistent.rs
src/error/: mod.rs
src/error/connection/: causes.rs  code.rs  description.rs  docs.rs  mod.rs  solutions.rs
